# nexus-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  AUTH_DOCUMENTATION.md  CELERY_SETUP.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.api  Dockerfile.streamlit  Home.py  LICENSE  MERGE_PLAN.md  MERGE_REPORT.md  MODULES_INDEX.md  Makefile  NOTIFICATION_SYSTEM.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_AB_TESTING.md  README_CONTENT_CALENDAR.md  README_CONTRACTS.md  README_EXCEL.md  README_TRANSLATION.md  SETUP_GUIDE.md  STREAMLIT_UI_GUIDE.txt  WEBSOCKET_README.md  alembic.ini  api.py  api_server.py  app.py  cache.py  celery_app.py  celery_tasks.py  celery_worker.sh  (+14 more)
.github/workflows/: ci-image-recognition.yml  ci-testing.yml  ci.yml  deploy.yml  testing-ci.yml
.streamlit/: config.toml
ai/: __init__.py  claude_client.py  prompts.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/: __init__.py  ad_routes.py  app.py  dependencies.py  lead_routes.py  main.py
api/middleware/: __init__.py  cors.py  logging.py  rate_limit.py
api/routers/: __init__.py  ai.py  auth.py  chat.py  documents.py  emails.py  files.py  projects.py  tasks.py  users.py  wiki.py
api/schemas/: __init__.py  ai.py  chat.py  common.py  document.py  email.py  file.py  project.py  task.py  user.py
app/: __init__.py  config.py  main.py
app/models/: __init__.py
app/pages/: task_monitor.py
app/tasks/: ai_tasks.py  email_tasks.py  file_tasks.py  maintenance_tasks.py  report_tasks.py
app/utils/: __init__.py  helpers.py  logger.py  task_stats.py
apps/: __init__.py
apps/calendar/: main.py
apps/chat/: main.py
apps/crm/: main.py
apps/email/: main.py
apps/notes/: main.py
apps/powerpoint/: main.py
apps/projects/: main.py
apps/video_conference/: main.py
backend/: __init__.py  alembic.ini  database.py  main.py  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
backend/models/: __init__.py  base.py  delivery.py  document.py  notification.py  preference.py  template.py  user.py
backend/routers/: __init__.py  notifications.py
backend/schemas/: document.py
backend/services/: __init__.py
backend/tests/: __init__.py  conftest.py  test_ocr.py  test_translation.py
config/: __init__.py  celery_config.py  config.py  constants.py  database.py  logging.py  logging_config.py  redis_config.py  settings.py
core/: __init__.py  api_client.py  base_module.py  config.py  logging.py  utils.py
core/ai/: __init__.py  orchestrator.py
core/auth/: __init__.py  middleware.py  models.py  service.py
core/database/: __init__.py  base.py  session.py
core/storage/: __init__.py  manager.py
database/: README.md  __init__.py  connection.py  engine.py  init_db.py  models.py
database/alembic/: README.md  env.py
database/models/: __init__.py  base.py  batch_job.py
docker/: Dockerfile.backend  Dockerfile.celery  Dockerfile.frontend  Dockerfile.image-recognition  Dockerfile.testing
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  LOGGING.md  ORCHESTRATION_README.md  SETUP.md
docs/knowledge_base/: API.md  README.md
docs/modules/: attribution.md  rpa.md
examples/: README.md  advanced_indexing.py  api_builder_example.py  audit_logging_example.py  basic_logging_example.py  basic_search.py  email_usage.py  fastapi_logging_example.py  http_workflow.py  log_search_api_example.py  monitoring_demo.py  parallel_workflow.py  send_notification.py  simple_workflow.py
frontend/: app.py  config.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/pages/: 01_campaign_manager.py  02_campaign_analytics.py  Attribution.py  __init__.py  ocr_page.py  translation_page.py
frontend/services/: api_client.py
frontend/utils/: __init__.py  api_client.py  session.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py
modules/: README.md  __init__.py  base_module.py  session36_flowchart.py  session37_mindmap.py  session38_infographics.py  session39_whiteboard.py  session40_gantt.py  session41_database.py  session42_api_tester.py  session43_code_editor.py  session44_website_builder.py  session45_blog.py
modules/ab_testing/: __init__.py  config.py
modules/accounting/: ap_ar.py  expenses.py  invoicing.py  ledger.py  reports.py
modules/advertising/: __init__.py  ad_types.py  analytics.py  automation.py  bidding.py  budgets.py  campaigns.py  creatives.py  integration.py  models.py  optimization.py  platforms.py  reporting.py  schemas.py  streamlit_ui.py  targeting.py  (+1 more)
nexus/: __init__.py  app.py
pages/: 1_📊_PowerPoint.py  1_🔐_Login.py  2_📝_Register.py  2_📧_Email.py  3_👤_Profile.py  3_💬_Chat.py  4_📊_Projects.py  4_🔑_Reset_Password.py  5_📁_Files.py  5_📅_Calendar.py  6_☁️_Upload.py  6_📹_Video_Conference.py  7_📝_Notes.py  7_🔍_Search_Files.py  8_💼_CRM.py
scripts/: celery_worker.py  init-db.sql  init_db.py  init_search.py  reindex_all.py  run.sh  run_streamlit.py  run_streamlit.sh  seed_data.py  setup.sh  start.sh  start_dev.sh  stop.sh
search/: README.md  __init__.py  client.py  config.py  content_indexers.py  indexer.py  models.py  monitoring.py  schemas.py  searcher.py  utils.py
shared/: __init__.py  cache.py  config.py  constants.py  database.py  exceptions.py  logger.py  types.py  utils.py
tasks/: __init__.py  advertising_tasks.py  celery_app.py  lead_generation_tasks.py
tests/: __init__.py  conftest.py  test_advertising.py  test_calendar.py  test_chat.py  test_config.py  test_content.py  test_email_client.py  test_excel.py  test_lead_generation.py  test_modules.py  test_planner.py  test_presentation.py  test_projects.py  test_search.py  test_translation.py  test_word.py
ui/: __init__.py  advertising_ui.py  lead_generation_ui.py  main.py
utils/: __init__.py  ai_assistant.py  exporters.py  formatters.py  storage.py  validators.py
websocket/: __init__.py  connection_manager.py  events.py  server.py
(+1454 files in other folders)
